--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "tsc": "tsc",
     "watch": "tsc -w",
     "lint": "tslint 'src/**/*.ts'",
-    "install": "node scripts/install.js",
+    "build-node": "node scripts/install.js",
+    "build-electron": "cd scripts && ./build-electron.sh",
+    "install": "npm run build-node",
     "postinstall": "node scripts/post-install.js",
-    "test": "cross-env NODE_ENV=test mocha -R spec --exit lib/*.test.js",
+    "test": "NODE_ENV=test mocha -R spec --exit lib/*.test.js",
     "prepare": "npm run tsc",
     "prepublishOnly": "npm run tsc"
   },
@@ -48,11 +50,10 @@
   "devDependencies": {
     "@types/mocha": "^5.0.0",
     "@types/node": "8",
-    "cross-env": "^5.1.4",
     "mocha": "^5.0.5",
-    "ps-list": "^6.0.0",
+    "ps-list": "^7.0.0",
     "tslint": "^5.12.1",
     "tslint-consistent-codestyle": "^1.15.0",
-    "typescript": "3.4"
+    "typescript": "3.8.3"
   }
 }
